Code structure optimization